--- a/Transparency.css
+++ b/Transparency.css
@@ -351,7 +351,15 @@ video {
   background-color: rgba(0, 0, 0, 0) !important;
 }
 
-#app-mount > div.appAsidePanelWrapper-ev4hlp > div.notAppAsidePanel-3yzkgB > div:nth-child(3) > div > div > div.tooltipContent-38tm3I > div:nth-child(2) >div {
+#app-mount > div.appAsidePanelWrapper-ev4hlp > div.notAppAsidePanel-3yzkgB > div:nth-child(3) > div > div > div.tooltipContent-38tm3I > div:nth-child(2) > div {
+  background-color: rgba(0, 0, 0, 0) !important;
+}
+
+#app-mount > div.appAsidePanelWrapper-ev4hlp > div.notAppAsidePanel-3yzkgB > div:nth-child(3) > div > div > div.tooltipContent-38tm3I > div:nth-child(3) > div {
+  background-color: rgba(0, 0, 0, 0) !important;
+}
+
+#app-mount > div.appAsidePanelWrapper-ev4hlp > div.notAppAsidePanel-3yzkgB > div:nth-child(3) > div > div > div.tooltipContent-38tm3I > div:nth-child(4) > div {
   background-color: rgba(0, 0, 0, 0) !important;
 }
 
